--- a/app/views/layouts/_user_stats.html.slim
+++ b/app/views/layouts/_user_stats.html.slim
@@ -1,4 +1,5 @@
-= link_to current_user.beer_items.count, new_beer_item_path, { :id => "beer-item-count", :title => "Add a new menu listing" }
-| &nbsp;| 
-span id="beer-count"
-  = current_user.had_beers.count
+- cache 'user_stats' do
+  = link_to current_user.beer_items.count, new_beer_item_path, { :id => "beer-item-count", :title => "Add a new menu listing" }
+  | &nbsp;| 
+  span id="beer-count"
+    = current_user.had_beers.count
