--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -635,3 +635,7 @@ div#devise-shared-links {
   height: 50px;
   margin-left: 30px;
 }
+div.address {
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
