--- a/app/views/bars/_track_it.html.slim
+++ b/app/views/bars/_track_it.html.slim
@@ -1,19 +1,22 @@
-- if user_signed_in?
-  - if @user_beers.include? item.beer
-    = form_for @beer_tracks.select { |i| i.beer_id == item.beer.id }, :html => { :method => :delete, :id => "beer_tracks_#{item.id}" }, :remote => true do |h|
-      div class="beer_tracking"
-        = h.hidden_field :bar_id
-        = hidden_field_tag "beer_item_id", item.id
-        = hidden_field_tag "from", "bars_page"
-        = check_box_tag "beer_tracking", "remove", true, :onclick => "$('#beer_tracks_#{item.id}').submit();"
-        / = image_submit_tag "full_circle.png"
-  - else
-    = form_for current_user.beer_tracks.build(:beer_id => item.beer.id, :bar_id => item.bar.id), :html => { :id => "beer_tracks_#{item.id}" }, :remote => true do |g|
-      div
-        = g.hidden_field :bar_id
-        = g.hidden_field :beer_id
-        = hidden_field_tag "beer_item_id", item.id
-        = hidden_field_tag "from", "bars_page"
-        div class="beer_tracking"
-          / = image_submit_tag "empty_circle.png"
-          = check_box_tag "beer_tracking", "add", false, :onclick => "$('#beer_tracks_#{item.id}').submit();"
+/ - if user_signed_in?
+/   - if @user_beers.include? item.beer
+/     = form_for @beer_tracks.select { |i| i.beer_id == item.beer.id }, :html => { :method => :delete, :id => "beer_tracks_#{item.id}" }, :remote => true do |h|
+/       div class="beer_tracking"
+/         = h.hidden_field :bar_id
+/         = hidden_field_tag "beer_item_id", item.id
+/         = hidden_field_tag "from", "bars_page"
+/         / = check_box_tag "beer_tracking", "remove", true, {:onclick => "$('#beer_tracks_#{item.id}').submit();", :class => "beer_tracking_checkbox"}
+/         = check_box_tag "beer_tracking", "remove", false, {onclick: "$('#beer_tracks_#{item.id}').submit();", class: "beer_tracking_checkbox", disabled: true}
+/         / = image_submit_tag "full_circle.png"
+/   - else
+/     = form_for current_user.beer_tracks.build(:beer_id => item.beer.id, :bar_id => item.bar.id), :html => { :id => "beer_tracks_#{item.id}" }, :remote => true do |g|
+/       div
+/         = g.hidden_field :bar_id
+/         = g.hidden_field :beer_id
+/         = hidden_field_tag "beer_item_id", item.id
+/         = hidden_field_tag "from", "bars_page"
+/         div class="beer_tracking"
+/           / = image_submit_tag "empty_circle.png"
+/           = check_box_tag "beer_tracking", "add", false, {onclick: "$('#beer_tracks_#{item.id}').submit();", class: "beer_tracking_checkbox", disabled: true}
+
+= check_box_tag "beer_tracking", "add", false, {class: "beer_tracking_checkbox", :"data-beer" => item.beer.id, :"data-bar" => item.bar.id}
