--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -4,39 +4,40 @@
   = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js.js"
   = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js.js"
   = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js.js"
-  = javascript_include_tag "rating_ballot"
+  = javascript_include_tag "bars"
   = stylesheet_link_tag "gmaps4rails.css"
 
-h1  = @bar.name
-p
-  - if @bar.photo.present?
-    = image_tag @bar.photo.url(:medium), :id => "bar-photo"
-  - else
-    div id="bar-photo-missing"
-      p = link_to "Add a photo!", edit_bar_path(@bar)
-  br
-  = @bar.address
-  br
-  = @bar.city
-  = @bar.state 
-  br
-  = @bar.zip
-  br
-  = !@bar.url.nil? ? link_to("Website", @bar.url) : "" 
+- cache "bar_details_#{@bar.id}" do
+  h1  = @bar.name
+  p
+    - if @bar.photo.present?
+      = image_tag @bar.photo.url(:medium), :id => "bar-photo"
+    - else
+      div id="bar-photo-missing"
+        p = link_to "Add a photo!", edit_bar_path(@bar)
+    br
+    = @bar.address
+    br
+    = @bar.city
+    = @bar.state 
+    br
+    = @bar.zip
+    br
+    = !@bar.url.nil? ? link_to("Website", @bar.url) : "" 
 
-p id="toggle-map-link"
-  a
-    | Show Map
+  p id="toggle-map-link"
+    a
+      | Show Map
 
-div id="gmap_popup_panel"
-  a id="gmap_popup_panel_close" x  
-  - if @bar.latitude.present? && @bar.longitude.present?
-    = gmaps("map_options" => { "detect_location" => true, "center_on_user" => false, "zoom" => 14, "auto_adjust" => true, "auto_zoom" => false}, "markers" => { "data" => @json })
+  div id="gmap_popup_panel"
+    a id="gmap_popup_panel_close" x  
+    - if @bar.latitude.present? && @bar.longitude.present?
+      = gmaps("map_options" => { "detect_location" => true, "center_on_user" => false, "zoom" => 14, "auto_adjust" => true, "auto_zoom" => false}, "markers" => { "data" => @gmaps_json })
 
-h3 Pouring #{pluralize(@bar.beers.count, "beer")}
-br
+  h3 Pouring #{pluralize(@bar.beers.count, "beer")}
+  br
 
-= link_to("Add a new listing", new_beer_item_path(:beer_item => {:bar_id => @bar.id})) if user_signed_in?
+  = link_to("Add a new listing", new_beer_item_path(:beer_item => {:bar_id => @bar.id})) if user_signed_in?
 
 div style="clear:both"
   / = form_tag bar_path(@bar), :method => :get, :remote => true do
@@ -44,6 +45,7 @@ div style="clear:both"
   /     | View:  
   /     = select_tag "sort_by_pouring", options_for_select([["All","all"],["draught","draught"],["bottle","bottle"],["can","can"],["pitcher", "pitcher"],["cask pour","cask pour"]],params[:sort_by_pouring]), :class => "searchable_option", :id => "pouring-select", :onchange => "this.form.submit();"
 
+/ - cache "list_of_beer_items_#{@bar.id}" do
 div id="beer_item_list"
   = render "beers"
 
