if a user isn't logged in and trying to make a bar as had, a notice is presented for them to login or signup

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -274,6 +274,12 @@ form.rating_ballot label.rating.glow {
   width: 40%;
   text-align: center;
 }
+#main .notice-container a {
+  color: #AF7817;
+}
+#main .notice-container a:hover {
+  color: #b71234;
+}
 #main #announcement {
   text-align: center;
   padding: 25px 50px;
