--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,10 +9,7 @@ html
           div id="iphone-message"
             | Using a mobile browser?  #{link_to "Use an optimized version of the site", "http://m.atlbeerlist.com/"}
         - if notice.present?
-          div class="ui-state-highlight ui-corner-all notice-container" style="margin-top: 20px; padding: 0 .7em;"
-            p
-              span class="ui-icon ui-icon-info" style="float: left; margin-right: 0.3em;"
-              strong #{raw(notice)}
+          - render "layouts/notice"
         - if alert.present?
           div class="ui-state-error ui-corner-all notice-container" style="padding: 0 .7em;"
             p
