greatly improved the loading time of beers/show

--- a/app/views/beers/_rating.html.slim
+++ b/app/views/beers/_rating.html.slim
@@ -1,13 +1,14 @@
+- user_rating = current_user_rating(beer, dim)
 = form_for(rating_ballot(beer, dim), :remote => true, :html => { :class => 'rating_ballot', :id => "#{dim}_rating" }) do |f|
     = label_tag("#{dim}_1", "", :class=>"rating", :id=>"1")
-    = radio_button_tag("rating[value]", 1, current_user_rating(beer, dim) == 1, :class => 'rating_button', :id => "#{dim}_1")
+    = radio_button_tag("rating[value]", 1, user_rating == 1, :class => 'rating_button', :id => "#{dim}_1")
     = label_tag("#{dim}_2", "", :class=>"rating", :id=>"1")
-    = radio_button_tag("rating[value]", 2, current_user_rating(beer, dim) == 2, :class => 'rating_button', :id => "#{dim}_2")
+    = radio_button_tag("rating[value]", 2, user_rating == 2, :class => 'rating_button', :id => "#{dim}_2")
     = label_tag("#{dim}_3", "", :class=>"rating", :id=>"1")
-    = radio_button_tag("rating[value]", 3, current_user_rating(beer, dim) == 3, :class => 'rating_button', :id => "#{dim}_3")
+    = radio_button_tag("rating[value]", 3, user_rating == 3, :class => 'rating_button', :id => "#{dim}_3")
     = label_tag("#{dim}_4", "", :class=>"rating", :id=>"1")
-    = radio_button_tag("rating[value]", 4, current_user_rating(beer, dim) == 4, :class => 'rating_button', :id => "#{dim}_4")
+    = radio_button_tag("rating[value]", 4, user_rating == 4, :class => 'rating_button', :id => "#{dim}_4")
     = label_tag("#{dim}_5", "", :class=>"rating", :id=>"1")
-    = radio_button_tag("rating[value]", 5, current_user_rating(beer, dim) == 5, :class => 'rating_button', :id => "#{dim}_5")
+    = radio_button_tag("rating[value]", 5, user_rating == 5, :class => 'rating_button', :id => "#{dim}_5")
     = hidden_field_tag("beer_id", beer.id)
     = f.hidden_field :dimension
