--- a/app/views/beers/_beers_list.html.slim
+++ b/app/views/beers/_beers_list.html.slim
@@ -7,16 +7,27 @@ div
         th width=25 Beer
         th width=25 Brewery
         th width=20 Style
-        th width=15 Pouring at...
+        / th width=15 Pouring at...
     tbody
       - @beers.each do |beer|
         tr data-url="beers/#{beer.id}"
           - if user_signed_in?
             td
               div id="beer-tracking-#{beer.id}"
-                = render :partial => "track_it", :locals => { :beer => beer }
+                - if user_signed_in?
+                  - if @user_beers.include? beer
+                    = form_for current_user.beer_tracks.find_by_beer_id(beer.id), :html => { :method => :delete, :id => "beer_tracks_#{beer.id}" }, :remote => true do |h|
+                      div class="beer_tracking"
+                        = hidden_field_tag "from", "beers_index"
+                        = check_box_tag "beer_tracking", "remove", true, :onclick => "$('#beer_tracks_#{beer.id}').submit();"
+                  - else
+                    = form_for current_user.beer_tracks.build(:beer_id => beer.id), :html => { :id => "beer_tracks_#{beer.id}" }, :remote => true do |g|
+                      div
+                        = g.hidden_field :beer_id
+                        = hidden_field_tag "from", "beers_index"
+                        div class="beer_tracking"
+                          = check_box_tag "beer_tracking", "add", false, :onclick => "$('#beer_tracks_#{beer.id}').submit();"
           td = link_to beer.name, beer
           td = link_to beer.brewery.name, beer.brewery
           td = beer.try(:beer_style) ? beer.beer_style.name : nil
-          td = pluralize(beer.beer_items.count, "bar")
-  / = image_tag "ajax-loader.gif", :id => "beers-loading-animation"
+          / td = pluralize(beer.beer_items.count, "bar")
