--- a/app/views/layouts/_userbar.html.slim
+++ b/app/views/layouts/_userbar.html.slim
@@ -12,7 +12,10 @@ div id="user_bar"
       li 
         | Welcome, #{ link_to current_user.email, profile_path(current_user)} (
         span id="user-stats"
-          = render "/layouts/user_stats"
+          = link_to current_user.beer_items.count, new_beer_item_path, { :id => "beer-item-count", :title => "Add a new menu listing" }
+          | &nbsp;| 
+          span id="beer-count"
+            = current_user.had_beers.count
         | ) 
         | - #{link_to "Logout", destroy_user_session_path, :id=>'logout', :method => :delete}
     - else
