--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Beer List</title>
-		<%= stylesheet_link_tag "http://code.jquery.com/mobile/1.0rc2/jquery.mobile-1.0rc2.min.css" %>
+		<%= stylesheet_link_tag "http://http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" %>
 		<%= javascript_include_tag "http://code.jquery.com/jquery-1.6.4.min.js" %>
 		<%= javascript_include_tag "jquery.rails.js" %>
-		<%= javascript_include_tag "http://code.jquery.com/mobile/1.0rc2/jquery.mobile-1.0rc2.min.js" %>
+		<%= javascript_include_tag "http://http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js" %>
 		<%= javascript_include_tag "iphone.js"%>
 		<script type="text/javascript">
 
