--- a/app/views/beer_items/_best_deals.html.slim
+++ b/app/views/beer_items/_best_deals.html.slim
@@ -8,7 +8,7 @@ table id="sorted_beer_item_list" class="itemlist"
       th width=100 class="abd-table-heading"	ABD
       th width=80	Price
   tbody
-    - for deal in BeerItem.top_deals do
+    - BeerItem.top_deals.each do |deal|
       tr
         td = link_to(deal.beer.name, deal.beer)
         td = link_to(deal.bar.name, deal.bar)
